<!--
  ~ Copyright (c) 2018 Halcyon Mobile
  ~ http://www.halcyonmobile.com
  ~ All rights reserved.
  -->

<resources>

    <string name="app_name">MobOS Lite</string>

    <string name="agenda">Agenda</string>
    <string name="speakers">Speakers</string>
    <string name="info">Info</string>

    <string name="no_connection_error">No network connection…</string>
    <string name="loading">Loading…</string>
    <string name="partners">Partners</string>
    <string name="team">The MobOS team</string>
    <string name="coc">Code of conduct</string>
    <string name="registration">Registration</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="venue">Venue</string>
</resources>
